FILE(GLOB SRCFILES *.cxx)
FILE(GLOB HFILES TT*.h)

ROOT_STANDARD_LIBRARY_PACKAGE(
        unTest
    HEADERS
        ${HFILES}
    SOURCES
        ${SRCFILES}
    DEPENDENCIES
        ${ROOT_LIBRARIES})

set_target_properties(unTest PROPERTIES PUBLIC_HEADER "${HFILES}")

install(TARGETS unTest
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_BINARY_DIR}/main/libunTest_rdict.pcm 
    ${CMAKE_BINARY_DIR}/main/libunTest.rootmap DESTINATION
    ${CMAKE_INSTALL_LIBDIR})
